test/good/generics/complex02.px

func f<A,B,C>(p: A*[B*C]): B*A def
    return p.b[0].a, p.a

print f(('$', [(5, 'x')]))
print f((false, [(-1.11, "X")]))
