test/bad/generics/type07.px

func f<A,B>(A*B*A p) def
    return

f(('$', 7, "$"))
